* Vnext
  * fixing a few typos

* v1.3.0824
  * fixing bug with repository recaching (when pulling dependent repositories)

* v1.3.0821
  * added listing of all modules and their actions in user-friendly format
  * added support to zip CK repositories in format suitable for BitTorrent
    (to optimize exchange of large artifacts)
  * improved functionality to update repo descriptions 
    and manage dependencies on other shared repositories
  * fixed a few tiny bugs
  * added support to create an entry from a given directory (importing directories)
  * added "input_json" function to kernel to input JSON from console ...
  * added option "@@@" to CMD to add JSON from console to input
  * exchanged "@@@" and "@@" in CMD for simplicity
  * improved 'edit' function with the possibility to edit not only 
      meta of an entry, but also description (via flag --edit_desc) -
      for example, useful to edit compiler flag description via
      $ ck pull repo:ck-autotuning
      $ ck edit compiler:gcc-49x
  * adding --min flag to ''load'' function to output 
    only desc and dict to console 
  * adding --without_files to avoid copying files 
    when copying/moving CK entries (useful
    to create templates for example for benchmarks
    or data sets)

# V1.2.0605, 2015-06-05 -- stable release
  (several extra features to improve autotuning)

  * save/load extra JSON files to/from entries
  * adding desc.json into .cm (collective meta) to describe API in flat format
  * adding dependencies to repos (automatically pull all related repos -
      useful to distribute repos with all packed artifacts to reproduce experiments from papers)
  * a few cosmetic fixes

# V1.2.0513, 2015-05-13 -- stable release 
  (no major problems found during past 2 months)

  * A few extensions and small bug fixes

# V1.1.0202, 2015-02-02 -- stable pre-release for collaborators

  * A few bug fixes

# V1.1.0201, 2015-02-01 -- stable pre-release for collaborators
